--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@
 DB_HOST=mn03.webd.pl
 DB_USER=medium1_jacek
 DB_PASSWORD=WiN99och
-DB_NAME=medium1_testowa
+DB_NAME=medium1_cars-auth
 
 #Localhost Config
 PORT=8080
+
+#Token JWT
+TOKEN_SECRET = zsedcftgbhujmkol
