--- a/.env-test
+++ b/.env-test
@@ -5,4 +5,7 @@ DB_PASSWORD=YOUR_PASSWORD
 DB_NAME=YOUR_NAME
 
 #Localhost Config
-PORT=YOUR_PORT
+PORT=8080
+
+#Token JWT
+TOKEN_SECRET = YOUR_TOKEN
