--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 #DB Connection
-DB_HOST=mn03.webd.pl
-DB_USER=medium1_jacek
-DB_PASSWORD=WiN99och
-DB_NAME=medium1_reservation-app
+DB_HOST=mn13.webd.pl
+DB_USER=jk2109_julia
+DB_PASSWORD=ewa1710
+DB_NAME=jk2109_ankietadotworzeniaankiet
 
 #Localhost Config
 PORT=8080
 
 #Token JWT
-TOKEN_SECRET = zsedcftgbhujmkol
+TOKEN_SECRET=zsedcftgbhujmkol
